force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Vehicle_Malfunction_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Vehicle_Malfunction_Reason__c</fullName>
    <label>Vehicle Malfunction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle breakdown</fullName>
            </value>
            <value>
                <fullName>Vehicle will not start</fullName>
            </value>
            <value>
                <fullName>Vehicle issue (ex: expired registration)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>