force-app/main/default/objects/sked_Operation_Record__c/fields/sked_WD_Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_Last_Submission_Date__c</fullName>
    <description>Date of last Workday submission attempt. Used with sked_Workday_Submission_Attempt__c to cap retries per day; next day attempts reset.</description>
    <label>Workday Last Submission Attempt Date</label>
    <type>Date</type>
</CustomField>