force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Wireless_Policy__c.field-meta.xml
<CustomField>
    <fullName>sked_Wireless_Policy__c</fullName>
    <formula>TEXT(sked_Drive_Site__r.sked_Wireless_Policy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wireless Policy</label>
    <type>Text</type>
</CustomField>