force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Workday_Import_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Import_Process_Id__c</fullName>
    <label>Workday Import Process Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>