force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Workday_Submission_Attempt__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Submission_Attempt__c</fullName>
    <description>Number of Workday submission attempts for this op record. Used for retry cap.</description>
    <label>Workday Submission Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>