force-app/main/default/objects/sked_Operation_Record__c/fields/sked_Workday_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Submission_Status__c</fullName>
    <description>Draft = waiting for batch. Processed = all staff submitted. Partial = some staff succeeded, some failed. Failed = technical failure.</description>
    <label>Workday Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>