force-app/main/default/objects/sked_Operation_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Drive__c</columns>
    <columns>sked_Drive_Date__c</columns>
    <columns>sked_Drive_Type__c</columns>
    <columns>sked_Drive_Shift__c</columns>
    <columns>sked_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>