force-app/main/default/objects/sked_Operation_Record__c/listViews/Not_Submitted_Op_Records.listView-meta.xml
<ListView>
    <fullName>Not_Submitted_Op_Records</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Drive_Date__c</columns>
    <columns>sked_Drive__c</columns>
    <columns>sked_Drive_Type__c</columns>
    <columns>sked_Drive_Start_Time__c</columns>
    <columns>sked_Drive_End_Time__c</columns>
    <columns>sked_Drive_External_ID__c</columns>
    <columns>sked_Status__c</columns>
    <columns>sked_Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Status__c</field>
        <operation>equals</operation>
        <value>Not Submitted</value>
    </filters>
    <label>Not Submitted Op-Records</label>
</ListView>